--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,8 @@
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
-.nav-svg-menu {
+.nav-svg-menu,
+.modal-menu {
   display: none;
 }
 .container {
@@ -608,7 +609,8 @@ ul {
     width: 100%;
     padding: 0;
   }
-  .nav-svg-menu {
+  .nav-svg-menu,
+  .modal-menu {
     display: none;
   }
   .header-div {
@@ -863,7 +865,7 @@ ul {
     margin: 0 auto;
   }
   /* Modal menu */
-  /* .modal-menu {
+  .modal-menu {
     position: fixed;
     top: 0;
     left: 0;
@@ -871,9 +873,65 @@ ul {
     height: 100%;
     visibility: hidden;
     opacity: 0;
-  } */
-  .modal-window .is-open {
+  }
+  .modal-menu .is-open {
     opacity: 1;
     z-index: 9999;
+  }
+  .menu-nav {
+    position: relative;
+  }
+  .close-button {
+    position: absolute;
+    top: -24px;
+  }
+  .menu-nav-ul {
+    width: 151px;
+    height: 200px;
+    margin-top: 72px;
+    margin-left: 16px;
+    margin-bottom: 168px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+  }
+  .menu-nav-ul-a {
+    font-weight: 700;
+    font-size: 36px;
+    color: #2e2f42;
+    text-decoration: none;
+  }
+  .nav-right-ul {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 24px;
+    margin-left: 16px;
+    margin-bottom: 48px;
+    width: 193px;
+    height: 72px;
+  }
+  .navright-li {
+    font-weight: 500;
+    font-size: 20px;
+  }
+  .footer-left-ul {
+    margin: 0 auto 40px;
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+  }
+  .menu-nav-ul-a {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .menu-nav-ul-a:hover,
+  .menu-nav-ul-a:focus {
+    color: #4d5ae5;
+  }
+  .navright-li {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .navright-li:hover,
+  .navright-li:focus {
+    color: #4d5ae5;
   }
 }
